syntax = "proto3";

package org.github.transerver.accounts;
option go_package = "github.com/transerver/protos/acctspb";

import "google/api/annotations.proto";
import "validate/validate.proto";

service AccountService {
  rpc Register(RegisterRequest) returns (RegisterReply) {
    option (google.api.http) = {
      post: "/user/v1/register"
      body: "*"
    };
  }

  rpc Login(LoginRequest) returns (LoginReply) {
    option (google.api.http) = {
      post: "/user/v1/login"
      body: "*"
    };
  }
}

message RegisterRequest {
  string unique = 1 [(validate.rules).string.pattern = "[A-Za-z0-9_-]+"];
  string region = 2 [(validate.rules).string = {pattern: "[A-Z]{2,}"}];
  string uname = 3 [(validate.rules).string = {ignore_empty: true, min_len: 8, max_len: 32}];
  string phone = 4 [(validate.rules).string = {ignore_empty: true, pattern: "[0-9]+"}];
  string email = 5 [(validate.rules).string = {ignore_empty: true, email: true}];
  string code = 6 [(validate.rules).string.len = 6];
  string password = 7 [(validate.rules).string.pattern = "\\S+"];
}

message RegisterReply {

}

message LoginRequest {
  string unique = 1 [(validate.rules).string.pattern = "[A-Za-z0-9_-]+"];
  string region = 2 [(validate.rules).string = {pattern: "[A-Z]{2,}"}];
  string uname = 3 [(validate.rules).string.pattern = "\\S+"];
  string code = 4 [(validate.rules).string.len = 6];
  string password = 5 [(validate.rules).string.pattern = "\\S+"];
}

message LoginReply {

}
